--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -1,5 +1,5 @@
 <footer>
-    <a href="#">Politique de confidentialité</a>
+    <a href="{{ path('app_policy') }}">Politique de confidentialité</a>
     <p>&copy;{{ "now"|date("Y") }} Taglialatela</p>
     <a href="#">Contact</a>
 </footer>
