feat: add ckeditor5 to the project

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -15,6 +15,7 @@
 @import "pages/errorPage";
 @import "pages/policyPage";
 @import "layout/review_card";
+@import "components/ckeditor5";
 
 
 html {
