--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -1,9 +1,9 @@
 .form-container {
   width: 100%;
-  height: 100vh;
+  margin-bottom: .5rem;
   @include screen-size(desktop) {
     width: 50%;
-    margin: auto;
+    margin: 1.5rem auto;
   }
 
   a {
