--- a/assets/styles/pages/_scenariosPage.scss
+++ b/assets/styles/pages/_scenariosPage.scss
@@ -31,14 +31,42 @@ section {
 
 .scenario-resume {
   width: 100%;
+  background-color: $third-color-lighter;
+  color: $dark;
+  border: 2px solid $white;
+  box-shadow: 4px 4px 10px $third-color;
+  padding: 20px;
+  margin: 20px auto;
+  border-radius: 6px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  @include screen-size(desktop) {
+    width: 50%;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    text-align: center;
+  }
 
   p {
     text-align: left;
     margin: 10px 5px;
     @include screen-size(desktop) {
-      width: 75vw;
+      font-size: $font-size-large;
+    }
+  }
+
+  hr {
+    width: 100%;
+    @include screen-size(desktop) {
+      width: 50%;
     }
   }
 }
